<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textSize="16sp" />
        </LinearLayout>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:layout_marginRight="8dp"
                android:onClick="increment"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000"
                android:textSize="16sp" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="submitOrder"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pic1"
            android:scaleType="centerCrop" />

    </LinearLayout>
</ScrollView>